--- a/install_apache.yml
+++ b/install_apache.yml
@@ -3,14 +3,54 @@
   become: true
   tasks:
 
+  - name: install apache and php
+    apt: 
+      name:
+        - "{{ apache_package }}"
+        - "{{ php_package }}"
+      state: latest
+      update_cache: yes
+
+
   - name: update repository index
     apt:
       update_cache: yes
+    when: ansible_distribution == "Ubuntu"
 
-  - name: install apache2 package
+
+  - name: install apache2 and php packages for Ubuntu
     apt:
-      name: apache2
+      name: 
+        - apache2
+        - libapache2-mod-php
+      state: latest
+      update_cache: yes
+    when: ansible_distribution == "Ubuntu"
+
 
   - name: add PHP support for apache
     apt:
       name: libapache2-mod-php
+    when: ansible_distribution == "Ubuntu"
+
+  - name: update repository index
+    dnf:
+      update_cache: yes
+    when: ansible_distribution == "CentOS"
+
+
+  - name: install apache2 and php packages for CentOS
+    dnf:
+      name: 
+        - httpd
+        - php
+      state: latest
+      update_cache: yes
+    when: ansible_distribution == "CentOS"
+
+
+  - name: add PHP support for apache
+    dnf:
+      name: php
+      state: latest
+    when: ansible_distribution == "CentOS"
